members-修正無法顯示問題

--- a/members.html
+++ b/members.html
@@ -116,185 +116,184 @@
     </main>
 
 <script>
-    const members = [
-        {
-            id: "serim",
-            name: "朴世琳",
-            krName: "박세림 Park Se Rim",
-            birth: "1999.03.03",
-            pos: "隊長(前),主Rapper",
-            mbti: "ENFJ",
-            blood: "A",
-            nick: "朴豬豬",
-			memo:"",
-	    	emoji: "🐺、🐽",
-            color: "#FF8772 (珊瑚色)",
-            img: "images/serim.jpg",
-            ccrewName: "WOOLPI",
-            ccrewImg: "images/ccrew_woolpi.jpg",
-        },
-        {
-            id: "allen",
-            name: "馬蒔權 Allen",
-            krName: "마시권",
-            birth: "1999.4.26",
-            pos: "主Rapper,主舞",
-            mbti: "ISFJ",
-            blood: "A",
-            nick: "",
-			memo:"",
-	    	emoji: 🐧",
-            color: "#CC3D3D (紅色)",
-            img: "images/allen.jpg",
-            ccrewName: "QUEENI",
-            ccrewImg: "images/ccrew_queeni.jpg",
-        },
-        {
-            id: "jungmo",
-            name: "具廷謨",
-            krName: "구정모 Koo Jung Mo",
-            birth: "2000.2.5",
-            pos: "領唱",
-            mbti: "INTP",
-            blood: "B",
-            nick: "",
-			memo:"",
-	    	emoji: "🐱",
-            color: "#E00096 (洋紅色)",
-            img: "images/jungmo.jpg",
-            ccrewName: "RANGMO",
-            ccrewImg: "images/ccrew_rangmo.jpg",
-        },
-        {
-            id: "woobin",
-            name: "徐宇璸 Ruby",
-            krName: "서우빈 Seo Woo Bin",
-            birth: "2000.10.16",
-            pos: "主唱",
-            mbti: "ISTP",
-            blood: "B",
-            nick: "",
-			memo:"",
-	    	emoji: "🐻",
-            color: "#FF5E00 (橘色)",
-            img: "images/woobin.jpg",
-            ccrewName: "WOOKA",
-            ccrewImg: "images/ccrew_wooka.jpg",
-        },
-        {
-            id: "wonjin",
-            name: "咸元進",
-            krName: "함원진 Ham Won Jin",
-            birth: "2001.3.22",
-            pos: "隊長、領唱、領舞",
-            mbti: "ENFP",
-            blood: "O",
-            nick: "",
-			memo:"",
-	    	emoji: "🐥",
-            color: "#A366FF (紫色)",
-            img: "images/wonjin.jpg",
-            ccrewName: "DAKONG",
-            ccrewImg: "images/ccrew_dakong.jpg",
-        },
-        {
-            id: "minhee",
-            name: "姜珉熙",
-            krName: "강민희 Kang Min Hee",
-            birth: "2002.9.17",
-            pos: "領唱",
-            mbti: "ISTP",
-            blood: "AB",
-            nick: "馬爾濟斯、土豆",
-			memo:"",
-	    	emoji: "🐶、🥔",
-            color: "#050099 (藍色)",
-            img: "images/minhee.jpg",
-            ccrewName: "KANGMONG",
-            ccrewImg: "images/ccrew_kangmong.jpg",
-        },
-        {
-            id: "hyeongjun",
-            name: "宋刑準",
-            krName: "송형준 Song Hyeong Jun",
-            birth: "2002.11.30",
-            pos: "隊長、主舞、副唱、Center",
-            mbti: "INFJ",
-            blood: "A",
-            nick: "巧克力貴賓(巧貴)、統營蜂蜜麵包",
-			memo:"",
-	    	emoji: "🐶、🍋",
-            color: "#47C83E (綠色)",
-            img: "images/hyeongjun.jpg",
-            ccrewName: "TEORI",
-            ccrewImg: "images/ccrew_teori.jpg",
-        },
-        {
-            id: "taeyoung",
-            name: "金太榮",
-            krName: "김태영 Kim Tae Young",
-            birth: "2003.1.27",
-            pos: "領舞、副唱、忙內",
-            mbti: "ENFP",
-            blood: "AB",
-            nick: "",
-			memo:"",
-	    	emoji: "🦊",
-            color: "#0DB4A0 (藍綠色)",
-            img: "images/taeyoung.jpg",
-            ccrewName: "YONG-T",
-            ccrewImg: "images/ccrew_yongT.jpg",
-        },
+  const members = [
+    {
+        id: "serim",
+        name: "朴世琳",
+        krName: "박세림 Park Se Rim",
+        birth: "1999.03.03",
+        pos: "隊長(前),主Rapper",
+        mbti: "ENFJ",
+        blood: "A",
+        nick: "朴豬豬",
+        memo: "",
+        emoji: "🐺、🐽",
+        color: "#FF8772 (珊瑚色)",
+        img: "images/serim.jpg",
+        ccrewName: "WOOLPI",
+        ccrewImg: "images/ccrew_woolpi.jpg",
+    },
+    {
+        id: "allen",
+        name: "馬蒔權 Allen",
+        krName: "마시권",
+        birth: "1999.4.26",
+        pos: "主Rapper,主舞",
+        mbti: "ISFJ",
+        blood: "A",
+        nick: "",
+        memo: "",
+        emoji: "🐧", // 修正：補上漏掉的引號
+        color: "#CC3D3D (紅色)",
+        img: "images/allen.jpg",
+        ccrewName: "QUEENI",
+        ccrewImg: "images/ccrew_queeni.jpg",
+    },
+    {
+        id: "jungmo",
+        name: "具廷謨",
+        krName: "구정모 Koo Jung Mo",
+        birth: "2000.2.5",
+        pos: "領唱",
+        mbti: "INTP",
+        blood: "B",
+        nick: "",
+        memo: "",
+        emoji: "🐱",
+        color: "#E00096 (洋紅色)",
+        img: "images/jungmo.jpg",
+        ccrewName: "RANGMO",
+        ccrewImg: "images/ccrew_rangmo.jpg",
+    },
+    {
+        id: "woobin",
+        name: "徐宇璸 Ruby",
+        krName: "서우빈 Seo Woo Bin",
+        birth: "2000.10.16",
+        pos: "主唱",
+        mbti: "ISTP",
+        blood: "B",
+        nick: "",
+        memo: "",
+        emoji: "🐻",
+        color: "#FF5E00 (橘色)",
+        img: "images/woobin.jpg",
+        ccrewName: "WOOKA",
+        ccrewImg: "images/ccrew_wooka.jpg",
+    },
+    {
+        id: "wonjin",
+        name: "咸元進",
+        krName: "함원진 Ham Won Jin",
+        birth: "2001.3.22",
+        pos: "隊長、領唱、領舞",
+        mbti: "ENFP",
+        blood: "O",
+        nick: "",
+        memo: "",
+        emoji: "🐥",
+        color: "#A366FF (紫色)",
+        img: "images/wonjin.jpg",
+        ccrewName: "DAKONG",
+        ccrewImg: "images/ccrew_dakong.jpg",
+    },
+    {
+        id: "minhee",
+        name: "姜珉熙",
+        krName: "강민희 Kang Min Hee",
+        birth: "2002.9.17",
+        pos: "領唱",
+        mbti: "ISTP",
+        blood: "AB",
+        nick: "馬爾濟斯、土豆",
+        memo: "",
+        emoji: "🐶、🥔",
+        color: "#050099 (藍色)",
+        img: "images/minhee.jpg",
+        ccrewName: "KANGMONG",
+        ccrewImg: "images/ccrew_kangmong.jpg",
+    },
+    {
+        id: "hyeongjun",
+        name: "宋刑準",
+        krName: "송형준 Song Hyeong Jun",
+        birth: "2002.11.30",
+        pos: "隊長、主舞、副唱、Center",
+        mbti: "INFJ",
+        blood: "A",
+        nick: "巧克力貴賓(巧貴)、統營蜂蜜麵包",
+        memo: "",
+        emoji: "🐶、🍋",
+        color: "#47C83E (綠色)",
+        img: "images/hyeongjun.jpg",
+        ccrewName: "TEORI",
+        ccrewImg: "images/ccrew_teori.jpg",
+    },
+    {
+        id: "taeyoung",
+        name: "金太榮",
+        krName: "김태영 Kim Tae Young",
+        birth: "2003.1.27",
+        pos: "領舞、副唱、忙內",
+        mbti: "ENFP",
+        blood: "AB",
+        nick: "",
+        memo: "",
+        emoji: "🦊",
+        color: "#0DB4A0 (藍綠色)",
+        img: "images/taeyoung.jpg",
+        ccrewName: "YONG-T",
+        ccrewImg: "images/ccrew_yongT.jpg",
+    },
+    {
+        id: "seongmin",
+        name: "安性珉",
+        krName: "안성민 An Seong Min",
+        birth: "2003.8.1",
+        pos: "副唱、忙內",
+        mbti: "ISTP",
+        blood: "O",
+        nick: "咚",
+        memo: "",
+        emoji: "🐰", // 修正：改成字串
+        color: "#FFBB00 (黃色)",
+        img: "images/seongmin.jpg",
+        ccrewName: "TOMMY",
+        ccrewImg: "images/ccrew_tommy.jpg",
+    },
+];
 
-        {
-            id: "seongmin",
-            name: "安性珉",
-            krName: "안성민 An Seong Min",
-            birth: "2003.8.1",
-            pos: "副唱、忙內",
-            mbti: "ISTP",
-            blood: "O",
-            nick: "咚",
-			memo:"",
-	    	emoji: "兔子",
-            color: "#FFBB00 (黃色)",
-            img: "images/seongmin.jpg",
-            ccrewName: "TOMMY",
-            ccrewImg: "images/ccrew_tommy.jpg",
-        },
-    ];
+const listContainer = document.getElementById('members-list');
 
-    const listContainer = document.getElementById('members-list');
-
-    members.forEach(m => {
-        const card = document.createElement('div');
-        card.className = 'member-card';
-        card.innerHTML = `
-            <img src="${m.img}" class="member-photo" alt="${m.name}">
-            <div class="info-content">
-                <h3>${m.name} <span class="korean-name">${m.krName}</span></h3>
-                <ul class="details-list">
-                    <li><b>生日：</b>${m.birth}</li>
-                    <li><b>定位：</b>${m.pos}</li>
-                    <li><b>MBTI：</b>${m.mbti}</li>
-                    <li><b>血型：</b>${m.blood}型</li>
-		    		<li><b>代表emoji：</b>${m.emoji}</li>
-                    <li><b>代表色：</b>${m.color}</li>
-                    <li><b>稱呼：</b>${m.nick}<br>
-					<p>${m.memo}</p></li>
-                </ul>
+members.forEach(m => {
+    const card = document.createElement('div');
+    card.className = 'member-card';
+    card.innerHTML = `
+        <img src="${m.img}" class="member-photo" alt="${m.name}">
+        <div class="info-content">
+            <h3>${m.name} <span class="korean-name">${m.krName}</span></h3>
+            <ul class="details-list">
+                <li><b>生日：</b>${m.birth}</li>
+                <li><b>定位：</b>${m.pos}</li>
+                <li><b>MBTI：</b>${m.mbti}</li>
+                <li><b>血型：</b>${m.blood}型</li>
+                <li><b>代表emoji：</b>${m.emoji}</li>
+                <li><b>代表色：</b>${m.color}</li>
+                <li><b>稱呼：</b>${m.nick}</li>
+            </ul>
+            <p style="font-size: 0.8rem; color: #666; padding: 0 5px;">${m.memo}</p>
+        </div>
+        <div class="ccrew-box" style="margin-top: auto;"> <img src="${m.ccrewImg}" class="ccrew-img" alt="${m.ccrewName}">
+            <div class="ccrew-info">
+                <h4>CCREW: ${m.ccrewName}</h4>
             </div>
-            <div class="ccrew-box">
-                <img src="${m.ccrewImg}" class="ccrew-img" alt="${m.ccrewName}">
-                <div class="ccrew-info">
-                    <h4>CCREW: ${m.ccrewName}</h4>
-                </div>
-            </div>
-            <a href="activity_member.html?member={m.id}" class="btn-activity">查看個人活動</a>
-        `;
-        listContainer.appendChild(card);
-    });
+        </div>
+        <a href="activity_member.html?member=${m.id}" class="btn-activity">查看個人活動</a>
+    `;
+    listContainer.appendChild(card);
+});
 </script>
 </body>
 
 </html>
+
