--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 </head>
 <body>
 
-    <div class="stars"></div>
-
-  <nav>
-        <div class="logo">CRAVITY 團體介紹</div>
+<nav>
+        <div class="logo">CRAVITY 成員介紹</div>
         <ul>
             <li><a href="index.html">團體介紹</a></li>
 	        <li><a href="members.html">成員介紹</a></li>
             <li><a href="discography.html">打歌活動</a></li>
             <li><a href="variety.html">綜藝活動</a></li>
         </ul>
-    </nav>
+</nav>
+
+<header style="text-align: center; padding: 60px 0;">
+    <h1 style="color: #4a148c; letter-spacing: 5px;">團體介紹</h1>
+</header>
 
     <header id="intro" class="section hero">
         <div class="glass-card">
@@ -236,4 +238,5 @@ function updateCP() {
 </body>
 
 </html>
+
 
