--- a/activity_member.html
+++ b/activity_member.html
@@ -24,34 +24,59 @@
             align-items: center;
         }
 
-        .cards-wrapper {
-            display: flex;
-            gap: 20px;
-            overflow-x: auto;
-            scroll-behavior: smooth;
-            padding: 10px 5px;
-            scrollbar-width: none; /* Firefox 隱藏捲軸 */
-        }
+        /* 確保包裹容器不會壓縮子元素 */
+.cards-wrapper {
+    display: flex;
+    gap: 20px;
+    overflow-x: auto;
+    padding: 10px 5px;
+    /* 確保橫向排列不換行 */
+    flex-wrap: nowrap; 
+}
+
+/* 修正卡片被壓縮的問題 */
+.activity-card {
+    /* 核心設定：0 表示不允許壓縮，固定寬度 */
+    flex-shrink: 0; 
+    width: 280px; 
+    min-width: 280px; 
+    
+    background: white;
+    border-radius: 20px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.06);
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+/* 確保文字不會超出卡片 */
+.act-info {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.act-subtitle {
+    font-weight: bold;
+    min-height: 2.8em; /* 預留兩行高度 */
+    word-break: break-all;
+}
         .cards-wrapper::-webkit-scrollbar { display: none; } /* Chrome/Safari 隱藏捲軸 */
 
-        /* 活動卡片 */
-        .activity-card {
-            min-width: 280px;
-            max-width: 280px;
-            background: white;
-            border-radius: 20px;
-            box-shadow: 0 8px 20px rgba(0,0,0,0.06);
-            overflow: hidden;
-            flex-shrink: 0;
-            transition: 0.3s;
-        }
         .activity-card:hover { transform: translateY(-5px); }
 
         .act-img { width: 100%; height: 160px; object-fit: cover; background: #eee; }
-        .act-info { padding: 15px; }
         .act-date { font-size: 0.8rem; color: #888; margin-bottom: 5px; }
-        .act-subtitle { font-weight: bold; font-size: 1rem; margin-bottom: 10px; height: 3rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
-        .act-cast { font-size: 0.85rem; color: var(--main-purple); margin-bottom: 15px; }
+        .act-cast {
+    font-size: 0.85rem;
+    color: var(--main-purple);
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    height: 2.5em; 
+}
 
         .btn-watch {
             display: block;
@@ -108,7 +133,7 @@
 
 <div class="container">
     <div id="activity-list">
-        <p style="text-align: center; padding: 50px;">正在加載 ${currentMemberId} 的活動內容...</p>
+        <p style="text-align: center; padding: 50px;">正在加載活動內容...</p>
     </div>
 </div>
 
@@ -116,7 +141,6 @@
     const urlParams = new URLSearchParams(window.location.search);
     const memberId = urlParams.get('member');
     
-    // 請替換為你的 App Script 部署 URL
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxoOChbgdxhQb-iAwLewfnQgt8kdcBf_lww5VtlHzJxK1_Wuuzz6IxUxvtnAihK-nBD/exec";
 
     async function loadActivities() {
@@ -147,39 +171,47 @@
         }
     }
 
-    function renderUI(grouped) {
-        const container = document.getElementById('activity-list');
-        container.innerHTML = ""; // 清空
+   function renderUI(grouped) {
+    const container = document.getElementById('activity-list');
+    container.innerHTML = "";
 
-        for (const title in grouped) {
-            const section = document.createElement('div');
-            section.className = 'group-section';
+    for (const title in grouped) {
+        const section = document.createElement('div');
+        section.className = 'group-section';
 
-            const cardsHTML = grouped[title].map(act => `
+        const cardsHTML = grouped[title].map(act => {
+            // --- 處理日期格式 yyyy-MM-dd ---
+            let formattedDate = "無日期";
+            if (act.date) {
+                formattedDate = String(act.date).split('T')[0].substring(0, 10).replace(/\//g, '-');
+            }
+
+            return `
                 <div class="activity-card">
-                    <img src="${act.imageUrl || 'images/default_poster.jpg'}" class="act-img" onerror="this.src='https://via.placeholder.com/300x180?text=CRAVITY'">
+                    <img src="${act.imageUrl || 'images/default_poster.jpg'}" class="act-img">
                     <div class="act-info">
-                        <div class="act-date">${act.date}</div>
+                        <div class="act-date">${formattedDate}</div>
                         <div class="act-subtitle">${act.subTitle}</div>
                         <div class="act-cast">參與：${act.cast}</div>
                         <a href="${act.videoUrlYT}" target="_blank" class="btn-watch">觀看連結</a>
                     </div>
                 </div>
-            `).join('');
-
-            section.innerHTML = `
-                <div class="group-header">
-                    <h2 class="group-title">${title}</h2>
-                </div>
-                <div class="slider-container">
-                    <button class="nav-arrow left" onclick="scrollSlider(this, -1)">❮</button>
-                    <div class="cards-wrapper">${cardsHTML}</div>
-                    <button class="nav-arrow right" onclick="scrollSlider(this, 1)">❯</button>
-                </div>
             `;
-            container.appendChild(section);
-        }
+        }).join('');
+
+        section.innerHTML = `
+            <div class="group-header">
+                <h2 class="group-title">${title}</h2>
+            </div>
+            <div class="slider-container">
+                <button class="nav-arrow left" onclick="scrollSlider(this, -1)">❮</button>
+                <div class="cards-wrapper">${cardsHTML}</div>
+                <button class="nav-arrow right" onclick="scrollSlider(this, 1)">❯</button>
+            </div>
+        `;
+        container.appendChild(section);
     }
+}
 
     function scrollSlider(btn, direction) {
         const wrapper = btn.parentElement.querySelector('.cards-wrapper');
@@ -193,3 +225,4 @@
 
 </body>
 </html>
+
